# Vehicle_Insurance_Projects

./: demo.py  main.py  pyproject.toml  setup.py
notebook/: mongoDB_demo.ipynb
src/exception/: __init__.py
src/logger/: __init__.py
