[project]
name = "vehicle-insurance-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.3",
    "botocore>=1.42.3",
    "certifi>=2025.11.12",
    "dill>=0.4.0",
    "fastapi>=0.123.9",
    "from-root>=1.3.0",
    "imblearn>=0.0",
    "ipykernel>=7.1.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pymongo>=4.15.5",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
